--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" /> 
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
 <body>
-  <nav class="navbar">
+  <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Note Taker
     </a>
   </nav>
@@ -22,7 +22,7 @@
       <a class="btn btn-primary btn-lg mt-4" href="./notes.html" role="button">Get Started</a>
     </div>
   </div>
-  <script src="/assets/js/index.js"></script>
+  <script src="C:\Users\son_o\Class_Work\homework\11-Express\Develop\public\assets\js\index.js"></script>
 </body>
 
 </html>
